--- a/app/flaskr/templates/parametres.html
+++ b/app/flaskr/templates/parametres.html
@@ -11,7 +11,7 @@
 </head>
 <body class="slide-out" data-page="page5">
     <header>
-        <img src="" alt="Photo" class="ta-pp">
+        <img src="../static/img/imagespp.jpeg" alt="Photo" class="ta-pp">
         <div class="Name-page">Paramètre</div>
     </header>
     <div class="settings-list">
