--- a/app/flaskr/templates/album.html
+++ b/app/flaskr/templates/album.html
@@ -10,7 +10,7 @@
 </head>
 <body class="slide-out" data-page="page4">
     <header>
-        <img src="" alt="Photo" class="ta-pp">
+        <img src="../static/img/imagespp.jpeg" alt="Photo" class="ta-pp">
         <div class="Name-page">Album</div>
     </header>
 
