--- a/app/flaskr/templates/chat.html
+++ b/app/flaskr/templates/chat.html
@@ -11,13 +11,13 @@
 </head>
 <body class="slide-out" data-page="page3">
     <header>
-        <img src="" alt="Photo" class="ta-pp">
+        <img src="../static/img/imagespp.jpeg" alt="Photo" class="ta-pp">
         <div class="Name-page">Chat</div>
     </header>
 
     <ul class="conversation">
         <div class="chat" onclick="redirectToChatPage()">
-            <img src="pasla" alt="pp" class="profilespictures">
+            <img src="../static/img/IMG_20240411_160531_906.jpg" alt="pp" class="profilespictures">
             <div class="chat-info">
                 <span class="chat-name">Jena Dupont 😾</span>
                 <div class="no-wrap">
