--- a/app/flaskr/static/css/page-parametre.css
+++ b/app/flaskr/static/css/page-parametre.css
@@ -306,3 +306,73 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
+#emailInputContainer {
+    margin-top: 10px;
+}
+
+#email {
+    padding: 8px;
+    font-size: 16px;
+    width: calc(100% - 16px);
+    margin-top: 10px;
+}
+
+button {
+    padding: 8px 12px;
+    font-size: 16px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+#message {
+    margin-top: 10px;
+    color: red;
+}
+
+/* Style de base pour le menu et les éléments */
+body {
+    font-family: Arial, sans-serif;
+}
+
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
