--- a/app/flaskr/templates/amis.html
+++ b/app/flaskr/templates/amis.html
@@ -18,7 +18,44 @@
         <input type="search" name="rechercheamis" placeholder="Taper le nom de votre ami ou ajouter un ami avec le +"/>
         <button class="search-button"><img src="../static/img/ajouteramis.png" alt="search icon"></button>
     </div>
-    <div class="ligne-sous-barre"></div>
+    <!-- <div class="ligne-sous-barre"></div> -->
+
+
+    <ul class="listeamis">
+        <div class="ami" onclick="redirectToChatPage()">
+            <img src="../static/img/IMG_20240411_160531_906.jpg" alt="pp" class="profilespictures">
+            <div class="amis-info">
+                <span class="amisname">Aloys</span>
+                <span class="amitemps">Votre amis depuis: ... jours</span>
+            </div>
+        </div>
+    </ul>
+    <ul class="listeamis">
+        <div class="ami" onclick="redirectToChatPage()">
+            <img src="../static/img/IMG_20240411_160531_906.jpg" alt="pp" class="profilespictures">
+            <div class="amis-info">
+                <span class="amisname">Jena Dupont 😾</span>
+                <span class="amitemps">Votre amis depuis: ... jours</span>
+            </div>
+        </div>
+    </ul>
+    <ul class="listeamis">
+        <div class="ami" onclick="redirectToChatPage()">
+            <img src="../static/img/IMG_20240411_160531_906.jpg" alt="pp" class="profilespictures">
+            <div class="amis-info">
+                <span class="amisname">ZOA</span>
+                <span class="amitemps">Votre amis depuis: ... jours</span>
+            </div>
+        </div>
+    </ul>
+
+
+
+
+
+
+
+
 
 
     <footer>
