--- a/app/flaskr/static/css/page-appphoto.css
+++ b/app/flaskr/static/css/page-appphoto.css
@@ -6,6 +6,7 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin-top: 2px;
     padding-top: 60px; /* Ajuste la hauteur du contenu pour tenir compte du header */
     padding-bottom: 60px; /* Ajuste la hauteur du contenu pour tenir compte du footer */
     overflow-y: auto; /* Permet le défilement vertical si le contenu est plus grand que l'écran */
@@ -59,19 +60,8 @@ footer {
     cursor: pointer;
 }
 
-.camera-container {
-    width: 300px;
-    height: 300px;
-    border: 2px solid #000;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #fff;
-}
-
-#camera-stream {
+nav video {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: auto;
+    background-color: #e01e1e;
 }
