--- a/app/flaskr/templates/photo.html
+++ b/app/flaskr/templates/photo.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" type="text/css" href="../static/css/page-appphoto.css">
     <link rel="icon" type="image/png" href="../static/img/logo_E-esprit.ico">
     <script src="../static/js/appareil-photo.js" defer></script>
-
 </head>
 <body class="slide-out" data-page="page2">
-    <div class="camera-container">
-        <video id="camera-stream" autoplay playsinline></video>
-    </div>
+    <nav>
+        <video id="video" autoplay playsinline></video>
+    </nav>
+    <nav>
+    </nav>
     <footer>
         <button class="footer-button" onclick="pageamis()"><img src="../static/img/amis.png" alt="icone-friends" class="icone-friends"></button>
         <button class="footer-button" onclick="pagecam()"><img src="../static/img/camera.png" alt="icone-cam" class="icone-cam"></button>
