--- a/app/flaskr/static/css/page-parametre.css
+++ b/app/flaskr/static/css/page-parametre.css
@@ -11,6 +11,7 @@ body{
 	padding-bottom: 60px; /* Ajuste la hauteur du contenu pour tenir compte du footer */
 	overflow-y: auto; /* Permet le défilement vertical si le contenu est plus grand que l'écran */
 	height: calc(100% - 120px); /* Ajuste la hauteur pour prendre en compte le header et le footer */
+    transition: background-color 0.3s, color 0.3s;
 }
 
 header, footer {
@@ -20,9 +21,15 @@ header, footer {
     text-align: left;
     position: fixed;
     width: 100%;
-    box-shadow: 0 2px 80px rgba(24, 24, 24, 0.1);
+    box-shadow: 0 2px 20px rgba(24, 24, 24, 0.1);
     z-index: 1000;
 }
+
+body.dark header, body.dark footer {
+    background-color: #333;
+    box-shadow: 0 2px 20px rgba(244, 242, 242, 0.123);
+}
+
 
 header {
     top: 0;
@@ -52,6 +59,10 @@ header img.ta-pp {
     color: #333; /* ajustez la couleur du texte à votre convenance */
 }
 
+body.dark .Name-page {
+    color: #fff; /* ajustez la couleur du texte à votre convenance */
+}
+
 footer {
     bottom: 0; /* Ajouté pour que le footer soit en bas de page */
     border-radius: 30px 30px 0 0; /* Arrondi les deux angles supérieurs */
@@ -63,10 +74,8 @@ footer {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-    
 }
 
-  
 .icone-friends,.icone-cam,.icone-discu,.icone-album,.icone-setting {
 	width: 30px; /* ajustez la largeur à votre convenance */
 	height: 30px; /* ajustez la hauteur à votre convenance */
@@ -76,97 +85,10 @@ footer {
 	padding-right: 10PX;
 	transition: transform 0.2s ease-in-out;
     opacity: 50%;
-    
 }
   
 .icone-friends:hover,.icone-cam:hover,.icone-discu:hover,.icone-album:hover,.icone-setting:hover {
     transform: scale(1.5); /* Augmente légèrement la taille au survol */
-}
-
-.conversation {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 10px 0;
-    justify-content: center;
-}
-
-.chat {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    border-top: 1px solid #dadada;
-    border-bottom: 1px solid #dadada;
-    border-left: none;
-    border-right: none;
-    border-radius: 10px;
-    transition: all 0.3s ease-in-out;
-    cursor: pointer;
-    height: 75px;
-    position: relative;
-    padding-right: 40px; /* Assurez-vous qu'il y a de l'espace pour le bouton réglage */
-}
-.chat-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex: 1; /* Prend tout l'espace disponible */
-}
-
-.chat-name {
-	font-weight: bold;
-	font-size: 18px;
-	text-align: left;
-}
-  
-.chat-message {
-	font-size: 16px;
-	color: #666;
-	text-align: left;
-	white-space: nowrap; /* empêche le texte de s'enrouler à la ligne suivante */
-	overflow: hidden; /* cache le texte qui dépasse */
-	text-overflow: ellipsis; /* remplace le texte qui dépasse par des points de suspension */
-	width: 100%; /* définir une largeur maximale pour l'élément */
-	display: inline-block;
-}
-
-.chat-temps {
-	font-size: 16px;
-	color: #8d8ef5;
-	text-align: left;
-	white-space: nowrap; /* empêche le texte de s'enrouler à la ligne suivante */
-	overflow: hidden; /* cache le texte qui dépasse */
-	text-overflow: ellipsis; /* remplace le texte qui dépasse par des points de suspension */
-	width: 100%; /* définir une largeur maximale pour l'élément */
-	display: inline-block;
-}
-
-.chat:hover {
-    background-color: #dfdfdf;
-}
-
-.no-wrap {
-	white-space: nowrap;
-}
-.no-wrap span {
-	margin: 0; /* Supprimer les marges */
-	padding: 0; /* Supprimer les rembourrages */
-	display: inline; /* Assurer qu'ils sont des éléments en ligne */
-}
-
-.profilespictures {
-    width: 30px; /* ajustez la largeur à votre convenance */
-    height: 30px; /* ajustez la hauteur à votre convenance */
-    border-radius: 20%; /* ajustez le rayon de courbure à votre convenance */
-    margin: 0 10px;
-
-}
-
-.reglage {
-    width: 25px; /* ajustez la largeur à votre convenance */
-    height: 25px; /* ajustez la hauteur à votre convenance */
 }
 
 .footer-button{
@@ -176,14 +98,13 @@ footer {
     margin: 0;
     cursor: pointer;
 }
+
 .footer-button img,.reglage-button img {
     width: 30px; /* ajustez la largeur à votre convenance */
     height: 30px; /* ajustez la hauteur à votre convenance */
     transition: transform 0.2s ease-in-out;
 }
-/* .footer-button img:hover,.reglage-button img:hover {
-	background-color: #8d8ef5;
-} */
+
 .reglage-button {
     position: absolute;
     right: 10px;
@@ -197,38 +118,6 @@ footer {
     cursor: pointer;
 }
 
-
-.fade-in {
-    opacity: 1;
-    transition: opacity 0.5s ease-in-out;
-}
-
-.fade-out {
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-}
-
-.listealbum {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    width: 100%;
-    gap: 10px; /* Optionnel : pour ajouter de l'espace entre les éléments */
-}
-
-.grid-item {
-    background-color: #ffffff;
-    border-radius: 15px;
-    height: 150px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    font-size: 24px;
-    font-weight: bold;
-    color: #333;
-    text-align: center;
-}
-
 .settings-list {
     width: 100%;
     max-width: 600px;
@@ -239,6 +128,11 @@ footer {
     overflow: hidden;
 }
 
+body.dark .settings-list {
+    background-color: #333;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+}
+
 .setting-item {
     display: flex;
     justify-content: space-between;
@@ -247,13 +141,22 @@ footer {
     border-bottom: 1px solid #eee;
 }
 
+body.dark .setting-item {
+    border-bottom: 1px solid #333;
+}
+
 .setting-item:last-child {
     border-bottom: none;
 }
 
-.setting-name {
+.setting-name span{
     font-size: 18px;
     color: #333;
+}
+
+.setting-name span.dark {
+    font-size: 18px;
+    color: #fff;
 }
 
 .switch {
@@ -278,6 +181,10 @@ footer {
     bottom: 0;
     background-color: #ccc;
     transition: .4s;
+}
+
+body.dark .slider {
+    background-color: #836d6d43;
 }
 
 .slider:before {
@@ -330,49 +237,59 @@ button {
     color: red;
 }
 
-/* Style de base pour le menu et les éléments */
-body {
-    font-family: Arial, sans-serif;
+select {
+    background-color: #fff;
+    margin: 0;
+    border: 0;
+    font-size: 17px;
+    padding: 0;
 }
 
-.dropbtn {
-    background-color: #4CAF50;
+body.dark select {
+    background-color: #333;
+    color: #fff;
+}
+
+body.dark    {
+    background-color: #333;
+    color: #fff;
+}
+
+#saveSettings {
+    padding: 10px 20px;
+    background-color: #007BFF;
     color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
+    border: 1px solid #ccc;
+    border-radius: 5px;
     cursor: pointer;
+    
 }
 
-.dropdown {
-    position: relative;
-    display: inline-block;
+body.dark #saveSettings {
+    background-color: #0056b3;
+    border: 1px solid #333;
 }
 
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+#saveSettings:hover {
+    background-color: #0056b3;
 }
 
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+body.dark #saveSettings:hover {
+    background-color: #007BFF;
 }
 
-.dropdown-content a:hover {
-    background-color: #f1f1f1;
+.save-btn{
+    max-width: 600px;
+    margin: auto auto;
+    padding: 20px;
+    border-radius: 10px;
 }
 
-.dropdown:hover .dropdown-content {
-    display: block;
+body.dark .save-btn {
+    background-color: #333;
 }
 
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+body.dark {
+    background-color: #333;
+    color: #fff;
 }
