--- a/app/flaskr/templates/parametres.html
+++ b/app/flaskr/templates/parametres.html
@@ -60,7 +60,7 @@
         <div class="setting-item">
             <span class="setting-name">Authentification à 2 Facteur</span>
             <label class="switch">
-                <input type="checkbox" id="Authentification a 2 facteur">
+                <input type="checkbox" id="authentification-double-facteur">
                 <span class="slider round"></span>
             </label>
         </div>
@@ -70,7 +70,17 @@
         </div>
 
         <div class="setting-item">
-            <span class="setting-name">Pseudo</span>
+            <button class="collapsible"><span class="setting-name">Pseudo</span></button>
+            <div class="content">
+                <div class="btn" data-direction="front"> <!-- Ajoutez l'attribut data-direction si nécessaire -->
+                    <div class="btn-back">
+                        <p>Are you sure you want to do that?</p>
+                        <button class="yes">Yes</button>
+                        <button class="no">No</button>
+                    </div>
+                    <div class="btn-front">Delete</div>
+                </div>
+            </div>
         </div>
 
         <div class="setting-item">
@@ -79,6 +89,12 @@
 
         <div class="setting-item">
             <span class="setting-name">Langue</span>
+            <select id="Langue">
+                <option value="fr">Francais</option>
+                <option value="en">English</option>
+                <option value="es">Spanish</option>
+                <option value="de">Deutch</option>
+            </select>
         </div>
 
         <!-- Ajoutez plus de paramètres ici -->
@@ -93,6 +109,66 @@
         <button class="footer-button" onclick="pagealbum()"><img src="../static/img/album-photo.png" alt="icone-album" class="icone-album"></button>
         <button class="footer-button" onclick="pageparametre()"><img src="../static/img/parametres.png" alt="icone-setting" class="icone-setting"></button>
     </footer>
-    
+    <script>
+        var coll = document.getElementsByClassName("collapsible");
+        var i;
+
+    for (i = 0; i < coll.length; i++) {
+        coll[i].addEventListener("click", function() {
+        this.classList.toggle("active");
+        var content = this.nextElementSibling;
+        if (content.style.maxHeight){
+            content.style.maxHeight = null;
+            } 
+        
+        else {
+            content.style.maxHeight = content.scrollHeight + "px";
+            } 
+        });
+    }
+
+    var btn = document.querySelector( '.btn' );
+
+var btnFront = btn.querySelector( '.btn-front' ),
+    btnYes = btn.querySelector( '.btn-back .yes' ),
+    btnNo = btn.querySelector( '.btn-back .no' );
+
+btnFront.addEventListener( 'click', function( event ) {
+  var mx = event.clientX - btn.offsetLeft,
+      my = event.clientY - btn.offsetTop;
+
+  var w = btn.offsetWidth,
+      h = btn.offsetHeight;
+	
+  var directions = [
+    { id: 'top', x: w/2, y: 0 },
+    { id: 'right', x: w, y: h/2 },
+    { id: 'bottom', x: w/2, y: h },
+    { id: 'left', x: 0, y: h/2 }
+  ];
+  
+  directions.sort( function( a, b ) {
+    return distance( mx, my, a.x, a.y ) - distance( mx, my, b.x, b.y );
+  } );
+  
+  btn.setAttribute( 'data-direction', directions.shift().id );
+  btn.classList.add( 'is-open' );
+
+} );
+
+btnYes.addEventListener( 'click', function( event ) {	
+  btn.classList.remove( 'is-open' );
+} );
+
+btnNo.addEventListener( 'click', function( event ) {
+  btn.classList.remove( 'is-open' );
+} );
+
+function distance( x1, y1, x2, y2 ) {
+  var dx = x1-x2;
+  var dy = y1-y2;
+  return Math.sqrt( dx*dx + dy*dy );
+}
+    </script>
 </body>
 </html>
