--- a/app/flaskr/templates/album.html
+++ b/app/flaskr/templates/album.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../static/css/page-album.css">
     <link rel="icon" type="image/png" href="../static/img/logo_E-esprit.ico">
     <script src="../static/js/main.js"></script>
+    <script src="../static/js/lbum.js"></script>
 </head>
 <body class="slide-out" data-page="page4">
     <header>
@@ -15,7 +16,7 @@
     </header>
 
     <div class="listealbum">
-        <div class="grid-item">Album du groupe....</div>
+        <div class="grid-item">Album du groupe "groupe d'amis"</div>
         <div class="grid-item">Album du chat avec ....</div>
         <div class="grid-item">Album du groupe ...</div>
         <div class="grid-item">Album du chat........</div>
