--- a/app/flaskr/templates/chat.html
+++ b/app/flaskr/templates/chat.html
@@ -29,6 +29,19 @@
                 <img src="../static/img/trois-points-plus-indicateur.png" alt="reglage" class="reglage">
             </div>
         </div>
+        <div class="chat" onclick="redirectToChatPage()">
+            <img src="../static/img/OIP.png" alt="pp" class="profilespictures">
+            <div class="chat-info">
+                <span class="chat-name">Groupe d'amis</span>
+                <div class="no-wrap">
+                    <span class="chat-temps">temps</span>
+                    <span class="chat-message">/ Cet endroit corespo...</span>
+                </div>
+            </div>
+            <div class="reglage-button" onclick="handleReglageClick()">
+                <img src="../static/img/trois-points-plus-indicateur.png" alt="reglage" class="reglage">
+            </div>
+        </div>
     </ul>
 
     <footer>
