--- a/app/flaskr/templates/photo.html
+++ b/app/flaskr/templates/photo.html
@@ -10,7 +10,7 @@
 </head>
 <body class="slide-out" data-page="page2">
     <nav>
-        <video id="video" autoplay playsinline></video>
+        <video id="video" class="lnAeT" autoplay data-projection-id="153"></video>
     </nav>
     <nav>
     </nav>
